--- a/style.css
+++ b/style.css
@@ -30,20 +30,24 @@
   border-radius: 10px;
   top: 20%;
   left: 13%;
-  padding: 2rem;
+  padding: 1.5rem;
   width: 25vw;
   height: 30vh;
   background-repeat: no-repeat;
   background-size: cover;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
 }
+.card-number-container {
+  display: flex;
+  justify-content: center;
+}
+
 .card-front p {
   color: hsl(0, 0%, 100%);
 }
 .card-number {
-  font-size: 25px;
-  margin-top: 40px;
-  margin-left: 10px;
+  font-size: 2.1rem;
+  margin-top: 15%;
 }
 .front-card-bottom {
   display: flex;
@@ -196,7 +200,7 @@ span {
 }
 
 /* ------------------media quaree-------------- */
-@media screen and (max-width: 375px) {
+@media only screen and (max-device-width: 375px) {
   .container {
     display: block;
   }
@@ -225,6 +229,7 @@ span {
   .card-number {
     margin-top: 2.5rem;
     font-size: 1.85rem;
+    /* margin-left: 0.2rem; */
   }
   .card-front img {
     width: 25%;
@@ -245,6 +250,80 @@ span {
   }
   .right-part form {
     margin-top: 2.5rem;
+    width: 100vw;
+    font-size: 1rem;
+    font-weight: 550;
+  }
+  .right-part form input {
+    padding: 1.2rem;
+  }
+  .right-part form button {
+    padding: 1.3rem;
+  }
+  .thankyou-container {
+    display: none;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40%;
+    margin-left: 40%;
+    width: 60vw;
+  }
+}
+
+@media only screen and (min-device-width: 375px) and (max-device-width: 480px) {
+  .container {
+    display: block;
+  }
+  .left-part {
+    width: 100%;
+    height: 225px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(images/bg-main-mobile.png);
+  }
+  .card-front {
+    width: 75%;
+    height: 190px;
+    position: absolute;
+    left: 5%;
+    top: 13%;
+    margin: 0;
+    z-index: 2;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .card-front img {
+    width: 3rem;
+    height: 3rem;
+  }
+  .card-number {
+    margin-top: 3.8rem;
+    font-size: 2rem;
+    margin-bottom: 3%;
+  }
+
+  .card-front img {
+    width: 25%;
+  }
+  .card-back {
+    width: 75%;
+    height: 190px;
+    position: absolute;
+    right: 5%;
+    top: 3%;
+    margin: 0;
+    z-index: 1;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .card-back p {
+    margin-top: 0;
+    margin-top: 23%;
+    margin-right: 22%;
+  }
+  .right-part form {
+    margin-top: 3.5rem;
     width: 100vw;
     font-size: 1rem;
     font-weight: 550;
